--- a/css/main.css
+++ b/css/main.css
@@ -197,8 +197,19 @@ img {
 
 .box {
   display: flex;
-  background-color: #eb81a5;
-  margin: 30px 0; }
+  margin: 32px 0; }
+
+#box1 {
+  background-color: #eb81a5; }
+
+#box2 {
+  background-color: #d4e9e2; }
+  #box2 h1 {
+    font-size: 22px;
+    letter-spacing: 0; }
+  #box2 p {
+    margin-top: 20px;
+    font-size: 16px; }
 
 .drinks {
   flex: 1;
@@ -213,30 +224,44 @@ img {
 .content {
   flex: 0.8;
   padding: 32px 40px;
-  text-align: center; }
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
   .content h1 {
-    margin-top: 40px;
-    font-size: 48px;
-    letter-spacing: 4px;
-    margin-bottom: 24px; }
+    font-size: 40px;
+    letter-spacing: 5px;
+    margin-bottom: 32px; }
   .content p {
+    margin-top: 32px;
     font-size: 24px; }
   .content button {
+    display: block;
+    width: 10em;
+    align-self: center;
     margin-top: 32px;
     font-size: 16px;
     font-weight: 500; }
 
 @media (max-width: 768px) {
   .box {
+    flex-direction: column; }
+  .reverse {
     flex-direction: column-reverse; }
   .content-container .content {
     flex: 1;
     padding: 32px 16px; }
     .content-container .content h1 {
       margin-top: 0;
-      font-size: 28px; }
+      font-size: 28px;
+      letter-spacing: 0;
+      margin-bottom: 0; }
     .content-container .content p {
       font-size: 22px; }
     .content-container .content button {
       margin-top: 16px;
       font-size: 14px; } }
+
+@media (max-width: 1024px) {
+  .content h1 {
+    font-size: 28px; } }
