--- a/sass/homepage.scss
+++ b/sass/homepage.scss
@@ -1,8 +1,26 @@
 .box {
     display: flex;
-    background-color: #eb81a5;
-    margin: 30px 0;
+    margin: 32px 0;
 }
+
+#box1 {
+    background-color: #eb81a5;
+}
+
+#box2 {
+    background-color: #d4e9e2;
+
+    h1 {
+        font-size: 22px;
+        letter-spacing: 0;
+    }
+
+    p {
+        margin-top: 20px;
+        font-size: 16px;
+    }
+}
+
 
 .drinks {
     flex: 1;
@@ -22,21 +40,28 @@
     flex: 0.8;
     padding: 32px 40px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
 
 
     h1 {
-        margin-top: 40px;
-        font-size: 48px;
-        letter-spacing: 4px;
-        margin-bottom: 24px;
+        font-size: 40px;
+        letter-spacing: 5px;
+        margin-bottom: 32px;
     }
 
     p {
+        margin-top: 32px;
         font-size: 24px;
 
     }
 
     button {
+        display: block;
+        width: 10em;
+        align-self: center;
         margin-top: 32px;
         font-size: 16px;
         font-weight: 500;
@@ -45,6 +70,10 @@
 
 @media (max-width: 768px) {
     .box {
+        flex-direction: column;
+    }
+
+    .reverse {
         flex-direction: column-reverse;
     }
 
@@ -56,6 +85,8 @@
             h1 {
                 margin-top: 0;
                 font-size: 28px;
+                letter-spacing: 0;
+                margin-bottom: 0;
             }
 
             p {
@@ -69,4 +100,12 @@
         }
     }
 
+}
+
+@media (max-width: 1024px) {
+    .content {
+        h1 {
+            font-size: 28px;
+        }
+    }
 }
