--- a/css/main.css
+++ b/css/main.css
@@ -195,6 +195,9 @@ img {
   .navbar .navbar-nav-right {
     display: none; } }
 
+main {
+  box-shadow: 0 4px 2px -2px #aeaaaa; }
+
 .box {
   display: flex;
   margin: 32px 0; }
@@ -210,6 +213,26 @@ img {
   #box2 p {
     margin-top: 20px;
     font-size: 16px; }
+  #box2 .drinks {
+    background-color: #006340; }
+
+#box3 {
+  background-color: #8f8bf4; }
+
+#box4 {
+  background-color: #cbe678; }
+  #box4 .drinks img {
+    width: 100%;
+    height: 100%; }
+
+#box5 {
+  background-color: #e1fccd; }
+  #box5 .drinks {
+    background-color: #009e75; }
+  #box5 h1 {
+    font-size: 24px; }
+  #box5 p {
+    font-size: 19px; }
 
 .drinks {
   flex: 1;
@@ -237,11 +260,20 @@ img {
     font-size: 24px; }
   .content button {
     display: block;
-    width: 10em;
+    width: 8em;
     align-self: center;
     margin-top: 32px;
     font-size: 16px;
     font-weight: 500; }
+
+.note {
+  display: flex;
+  justify-content: center;
+  padding: 32px 0;
+  text-align: center;
+  font-size: 14px; }
+  .note p {
+    flex: 0.6; }
 
 @media (max-width: 768px) {
   .box {
@@ -255,7 +287,8 @@ img {
       margin-top: 0;
       font-size: 28px;
       letter-spacing: 0;
-      margin-bottom: 0; }
+      margin-bottom: 0;
+      font-weight: 500; }
     .content-container .content p {
       font-size: 22px; }
     .content-container .content button {
