--- a/sass/homepage.scss
+++ b/sass/homepage.scss
@@ -155,6 +155,14 @@ main {
         }
     }
 
+    .note {
+        margin: 0 16px;
+
+        p {
+            flex: 1;
+        }
+    }
+
 }
 
 @media (max-width: 1024px) {
