--- a/css/gift_cards.css
+++ b/css/gift_cards.css
@@ -1,53 +1,89 @@
 *,
 ::before,
 ::after {
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box; }
 
 html {
-  font-family: 'Sodo Sans Semibold';
-  font-size: 10px; }
+  font-size: 10px;
+  font-family: 'Sodo Sans Semibold'; }
 
-.main__container {
-  position: relative;
-  padding: 0 40px 0 130px; }
+img {
+  display: block; }
 
-.card__text {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-weight: 700;
-  font-size: 1.4rem;
-  margin-bottom: 2rem; }
-  .card__text-right {
-    color: #00754A;
-    cursor: pointer; }
+.main-container {
+  display: grid;
+  grid-template-rows: repeat(14, min-content);
+  grid-template-columns: [full-start] 1fr repeat(9, [col-start] minmax(min-content, 1fr) [col-end]) [full-end]; }
+
+button {
+  border: none; }
 
 .cards {
+  grid-column: col-start / col-end 9;
+  position: relative; }
+  .cards__items {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    overflow: hidden;
+    margin: 1.9rem 0; }
+  .cards__text {
+    font-size: 1.6rem;
+    padding-right: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1.9rem; }
+    .cards__text--type {
+      text-transform: uppercase;
+      font-weight: 700;
+      letter-spacing: 0.1em; }
+  .cards__img {
+    width: calc(100% / 4.7);
+    height: 100%;
+    object-fit: cover;
+    margin-right: 3.2rem;
+    cursor: pointer;
+    border-radius: 1.5rem; }
+  .cards__button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%); }
+    .cards__button--style {
+      height: 3.7rem;
+      width: 3.7rem;
+      margin-top: 1rem;
+      border-radius: 50%;
+      background-color: #fff;
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.24), 0 8px 12px rgba(0, 0, 0, 0.14); }
+      .cards__button--style-icon {
+        padding-top: 3.1px;
+        width: 2rem;
+        height: 2rem; }
+    .cards__button--right {
+      right: 20px; }
+    .cards__button--left {
+      left: -20px; }
+
+.text__cards-gift {
+  background-color: lime;
+  grid-column: col-start / full-end;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 350vw; }
+  padding-right: 40px; }
+  .text__cards-gift-left {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    .text__cards-gift-left-got-a-gift-card {
+      font-size: 2.4rem;
+      font-weight: bold;
+      padding-right: 40px; }
 
-.gift-card {
-  margin-right: 2.5vw; }
-
-.card {
-  border-radius: 1.5rem;
-  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.14);
-  width: 100%; }
-
-.get-gift-card {
-  padding-left: 0;
-  margin-left: 0;
-  box-sizing: border-box;
-  position: absolute;
-  background-color: #D4E9E2;
-  width: 100%;
-  margin-top: 3rem;
-  padding: 20px 0px; }
-
-.blog-container-1 {
-  display: flex;
-  justify-content: space-between; }
+.helper-blank-1 {
+  background-color: lime;
+  grid-column: full-start / col-start;
+  grid-row: 2 / 3; }
