--- a/css/gift_cards.css
+++ b/css/gift_cards.css
@@ -14,14 +14,18 @@ img {
 
 .main-container {
   display: grid;
-  grid-template-rows: min-content 1fr repeat(12, min-content) 1fr 1fr;
+  grid-template-rows: repeat(2/min-content) repeat(12, min-content) 1fr;
   grid-template-columns: [full-start] 1fr repeat(9, [col-start] minmax(min-content, 1fr) [col-end]) [full-end]; }
 
 button {
   border: none;
   border: 1px solid #000;
   border-radius: 2rem;
-  font-size: 1.8rem; }
+  font-size: 1.8rem;
+  cursor: pointer;
+  padding: 7px 16px; }
+  button:hover {
+    transition: all 0.2s ease; }
 
 .cards {
   grid-column: col-start / col-end 9;
@@ -29,7 +33,7 @@ button {
   margin-top: 1.9rem; }
   .cards__items {
     display: flex;
-    justify-content: flex-start;
+    justify-content: fl ex-start;
     align-items: center;
     overflow: hidden;
     margin: 1.9rem 0;
@@ -67,17 +71,20 @@ button {
       margin-top: 1rem;
       border-radius: 50%;
       background-color: #fff;
-      box-shadow: 0 0 6px rgba(0, 0, 0, 0.24), 0 8px 12px rgba(0, 0, 0, 0.14); }
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.24), 0 8px 12px rgba(0, 0, 0, 0.14);
+      position: relative; }
       .cards__button--style-icon {
-        padding-top: 3.1px;
+        position: absolute;
+        left: 0.8rem;
+        top: 0.8rem;
         width: 2rem;
         height: 2rem; }
     .cards__button--right {
       border: none;
-      right: 20px; }
+      right: 10px; }
     .cards__button--left {
       border: none;
-      left: -20px; }
+      left: -10px; }
 
 .text__cards-gift {
   background-color: #D4E9E2;
@@ -87,7 +94,7 @@ button {
   align-items: center;
   padding-right: 30px;
   height: 117.09px;
-  margin-bottom: 1.9rem; }
+  margin: 16px 0; }
   .text__cards-gift-left {
     display: flex;
     justify-content: space-between;
@@ -107,17 +114,13 @@ button {
       padding: 0.5rem 1rem;
       margin-right: 1rem; }
       .text__cards-gift-left-btn-left:hover {
-        cursor: pointer;
-        background-color: rgba(0, 0, 0, 0.042);
-        transition: all 0.2s ease; }
+        background-color: rgba(0, 0, 0, 0.042); }
     .text__cards-gift-left-btn-right {
       color: #fff;
       background-color: #000;
       padding: 0.5rem 1rem; }
       .text__cards-gift-left-btn-right:hover {
-        cursor: pointer;
-        background-color: rgba(0, 0, 0, 0.764);
-        transition: all 0.2s ease; }
+        background-color: rgba(0, 0, 0, 0.764); }
   .text__cards-gift-right {
     display: flex;
     align-items: center;
@@ -125,9 +128,10 @@ button {
     color: #00754A; }
 
 .text__bulk-gift-cards {
+  background-color: #F9F9F9;
   grid-column: col-start / full-end;
   display: grid;
-  grid-template-columns: minmax(min-content, 150px) 5rem repeat(3, minmax(min-content, 150px)) 1fr;
+  grid-template-columns: minmax(min-content, 150px) 5rem repeat(2, minmax(min-content, 150px)) 1fr 1fr;
   grid-template-rows: 56px min-content 56px; }
   .text__bulk-gift-cards-img {
     grid-row: 2 / 3;
@@ -137,11 +141,59 @@ button {
       height: 100%;
       object-fit: cover; }
   .text__bulk-gift-cards-text {
-    grid-column: 3 / 6;
-    grid-row: 2 / 3; }
+    grid-column: 3 / 5;
+    grid-row: 2 / 3;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-evenly; }
+    .text__bulk-gift-cards-text-h3 {
+      font-size: 2.4rem; }
+    .text__bulk-gift-cards-text-p {
+      font-size: 1.6rem;
+      font-weight: 100; }
+    .text__bulk-gift-cards-text-btn {
+      background-color: #F9F9F9;
+      padding: 0.5rem 1rem; }
+      .text__bulk-gift-cards-text-btn:hover {
+        background-color: rgba(0, 0, 0, 0.042); }
+
+.cards-support {
+  grid-column: col-start / full-end;
+  height: 224px;
+  padding: 40px 0;
+  background-color: #EDEBE9;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly; }
+  .cards-support__h3 {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    margin-bottom: 8px; }
+  .cards-support__p {
+    font-size: 1.6rem;
+    max-width: 400px;
+    padding: 8px 0px; }
+  .cards-support__btn-1 {
+    margin: 1.6rem 1.6rem 0px 0px; }
+  .cards-support__btn-2 {
+    margin: 1.6rem 1.6rem 0px 0px; }
+  .cards-support__btn-3 {
+    margin: 1.6rem 1.6rem 0px 0px; }
 
 .helper-blank-1 {
   background-color: #D4E9E2;
   grid-column: full-start / col-start;
   grid-row: 2 / 3;
-  height: 117.09px; }
+  margin: 16px 0; }
+
+.helper-blank-2 {
+  background-color: #F9F9F9;
+  grid-column: full-start / col-start;
+  grid-row: 14 / 15; }
+
+.helper-blank-3 {
+  background-color: #EDEBE9;
+  grid-column: full-start / col-start;
+  grid-row: 15 / 16; }
